Incluyendo Calculadora y estilos Carroya

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,6 +4,55 @@ html {
   overflow-x: hidden;
 }
 
+.mat-horizontal-stepper-header {
+  display: grid !important;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.mat-horizontal-stepper-header .mat-step-icon {
+  align-self: center;
+  justify-self: center;
+  /* grid-row: 2; */
+}
+
+.mat-horizontal-stepper-header .mat-step-label {
+  grid-row: 1;
+}
+
+.mat-horizontal-stepper-header-container {
+  border-radius: 0;
+  padding: 0;
+  margin: 0;
+  background-color: none;
+  box-shadow: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .mat-horizontal-stepper-header-container {
+    border-radius: 10px;
+    padding: 15px;
+    margin: 15px;
+    background-color: #ffffff;
+    box-shadow: 0 0 6px 0px rgba(0, 0, 0, 0.4);
+  }
+}
+
+.mat-stepper-horizontal-line {
+  margin: 0 -50px !important;
+  border-top-width: 2px !important;
+}
+
+@media only screen and (min-width: 768px) {
+  .mat-stepper-horizontal-line {
+    margin: 0 -65px !important;
+  }
+}
+
+.subTitulo {
+  margin-top: 20px;
+}
+
 ::ng-deep .mat-horizontal-stepper-header {
   pointer-events: none !important;
 }
@@ -54,7 +103,14 @@ body {
   color: #808080;
   margin: 10px 0px;
   font-size: 14px;
-  margin: 10px 0px 0px 0px;
+  margin: 20px 0px;
+  display: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .titlesPpal .titleOne {
+    display: block;
+  }
 }
 
 .titlesPpal .titleTwo {
@@ -62,6 +118,13 @@ body {
   text-align: center;
   font-size: 14px;
   margin: 0px 0px 5px 0px;
+  display: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .titlesPpal .titleTwo {
+    display: block;
+  }
 }
 
 @media only screen and (min-width: 1366px) {
@@ -88,9 +151,9 @@ button:focus {
 
 .contButton button.anterior {
   display: none;
-  color: #2A9FD8;
+  color: #F10024;
   background-color: #fff;
-  border: 1px solid #2A9FD8;
+  border: 1px solid #F10024;
 }
 
 @media only screen and (min-width: 768px) {
@@ -111,7 +174,7 @@ button:focus {
 }
 
 .mat-button {
-  background: #2A9FD8;
+  background: #F10024;
   color: #fff;
   height: 50px;
 }
@@ -132,7 +195,7 @@ button:focus {
   position: absolute;
   background-color: #fff;
   margin: 2px 21px 0px 22px;
-  top: 11rem;
+  top: 10rem;
 }
 
 @media only screen and (min-width: 768px) {
@@ -166,19 +229,19 @@ button:focus {
 
 @media only screen and (min-width: 320px) {
   .containerModal .squareModal {
-    height: 48rem;
+    height: 54rem;
   }
 }
 
 @media only screen and (min-width: 375px) {
   .containerModal .squareModal {
-    height: 43rem;
+    height: 52rem;
   }
 }
 
 @media only screen and (min-width: 425px) {
   .containerModal .squareModal {
-    height: 41rem;
+    height: 51rem;
   }
 }
 
@@ -251,7 +314,8 @@ button:focus {
 }
 
 hr {
-  border: 1px dotted #C2C2C2 !important;
+  border: 1px solid #e9e9e9be !important;
+  margin: 20px 0px !important;
 }
 
 .checkTycOk {
@@ -296,9 +360,9 @@ button {
 }
 
 .encMercadolibre {
-  background-color: #fff02a;
+  background-color: #000000;
   display: grid;
-  grid-template-columns: 0.3fr 1fr 0.3fr;
+  grid-template-columns: 0.1fr 1fr 0.1fr;
   position: fixed !important;
   width: 100%;
   z-index: 1;
@@ -306,10 +370,30 @@ button {
   height: 50px;
 }
 
+.encMercadolibre .logos {
+  display: grid;
+  grid-column: 2;
+  grid-template-columns: repeat(2, 1fr);
+}
+
 .encMercadolibre img.mercadolibreM {
   width: 60%;
+  grid-column: 1;
   align-self: center;
-  justify-self: right;
+  justify-self: center;
+}
+
+.encMercadolibre img.santanderWt {
+  width: 60%;
+  grid-column: 2;
+  align-self: center;
+  justify-self: center;
+}
+
+@media only screen and (min-width: 768px) {
+  .encMercadolibre img.santanderWt {
+    width: 35%;
+  }
 }
 
 .encMercadolibre img.mercadolibreT {
@@ -325,8 +409,9 @@ button {
   }
   .encMercadolibre img.mercadolibreT {
     display: block;
+    grid-column: 1;
     align-self: center;
-    justify-self: right;
+    justify-self: center;
   }
 }
 
@@ -423,7 +508,7 @@ button {
   opacity: 0;
   display: grid;
   grid-template-rows: 1fr 2fr 1fr;
-  background-color: #fff02a;
+  background-color: #000000;
   z-index: 0;
   height: 100%;
   position: absolute;
@@ -448,6 +533,7 @@ button {
   grid-row: 2;
   align-self: end;
   justify-self: center;
+  color: #e9e9e9be;
 }
 
 .mat-step-header:hover {
@@ -586,4 +672,199 @@ button {
 .fadeIn {
   -webkit-animation-name: fadeIn;
   animation-name: fadeIn;
+}
+
+/* Radio Buttons Group */
+.contPeriodo {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 20px;
+  width: 100%;
+  margin: 10px 10px;
+  /* span {
+      grid-row: 1;
+    } */
+}
+
+@media only screen and (min-width: 768px) {
+  .contPeriodo {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: auto;
+  }
+}
+
+/* Radio Buttons */
+/* style your lables/button */
+input[type="radio"] + div {
+  /* keep pointer so that you get the little hand showing when you are on a button */
+  cursor: pointer;
+  /* the following are the styles */
+  border-radius: 3px;
+  padding: 5px 5px;
+  background-color: #fff;
+  border: 1px solid rgba(194, 194, 194, 0.747) !important;
+  width: 95%;
+  height: 50px;
+  border: none;
+  /* @include tabletLaptop() {
+      border-radius: 15px;
+    }
+  
+    @include laptopDesktop() {
+      border-radius: 15px;
+    }
+  
+    @include desktopFull() {
+      border-radius: 15px;
+    } */
+}
+
+.radio input[type="radio"]:checked + div {
+  /* style for the checked/selected state */
+  border-radius: 5px;
+  box-shadow: 0px 1px 7px 0px #C2C2C2;
+  background-color: white;
+  border: none;
+  /* @include laptopDesktop() {
+        border-radius: 15px;
+      }
+  
+      @include desktopFull() {
+        border-radius: 15px;
+      } */
+}
+
+/* Radio Button */
+.radio {
+  display: grid;
+  grid-template-columns: auto;
+}
+
+.radio input {
+  opacity: 0;
+  grid-column: 1;
+  grid-row: 1;
+  align-self: center;
+  justify-self: center;
+  z-index: 1;
+  width: 95%;
+  height: 100%;
+  /* @include laptopDesktop() {
+        min-height: 150px;
+      }
+      @include desktopFull() {
+        min-height: 150px;
+      } */
+}
+
+.radio div {
+  grid-column: 1;
+  grid-row: 1;
+  display: grid;
+  grid-auto-rows: 1fr;
+  align-self: center;
+  justify-self: center;
+}
+
+.radio div .mes {
+  grid-row: 1;
+  font-size: 12px;
+  color: #666674;
+  align-self: center;
+  text-align: center;
+  /* @include tabletLaptop() {
+          font-size: 18px;
+          font-weight: 600;
+        }
+  
+        @include laptopDesktop() {
+          font-size: 18px;
+          font-weight: 600;
+        }
+  
+        @include desktopFull() {
+          font-size: 18px;
+          font-weight: 600;
+        } */
+}
+
+.cntTitle {
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr;
+}
+
+.cntTitle div.title {
+  align-self: center;
+  justify-self: center;
+}
+
+.cntTitle small {
+  display: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .cntTitle {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .cntTitle small {
+    display: block;
+    align-self: center;
+    justify-self: right;
+    padding: 20px 10px;
+  }
+  .cntTitle div.title {
+    justify-self: left;
+    padding: 20px 10px;
+  }
+}
+
+mat-icon {
+  cursor: pointer;
+}
+
+.contDetalles {
+  border: 1px solid #e9e9e9be;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+small.infoRequerida {
+  display: block;
+}
+
+@media only screen and (min-width: 768px) {
+  small.infoRequerida {
+    display: none;
+  }
+}
+
+.mat-horizontal-stepper-header .mat-step-icon {
+  margin-right: 0px;
+}
+
+@media only screen and (min-width: 768px) {
+  .mat-horizontal-stepper-header .mat-step-icon {
+    margin-right: 20px;
+  }
+}
+
+.mat-step-label {
+  font-size: 10px;
+}
+
+@media only screen and (min-width: 768px) {
+  .mat-step-label {
+    font-size: 14px;
+  }
+}
+
+.mat-horizontal-stepper-header-container {
+  margin-top: 20px;
+}
+
+.pointer {
+  cursor: pointer;
 }
