--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,15 @@
-
 <div class="splash text-center">
-    <img src="../assets/mercadolibred.png" alt="" class="mercadoLogo">
+    <img src="../assets/logocy_negativo.svg" alt="" class="mercadoLogo">
     <p class="poBy">Powered By</p>
     <img src="../assets/santander.png" alt="" class="santander">
 </div>
 <div class="principal row grid animated fadeIn">
-    <div class="encMercadolibre col-12">
-        <img class="mercadolibreT" src="../assets/mercadolibred.png" alt="">
-        <img class="mercadolibreM" src="../assets/mercadolibre.png" alt="">
-    </div>    
+    <div class="encMercadolibre">
+        <div class="logos">
+            <img class="mercadolibreT" src="../assets/logocy_negativo.svg" alt="">
+            <img class="mercadolibreM" src="../assets/logocy_negativo.svg" alt="">
+            <img class="santanderWt" src="../assets/sconsumerwt.png" alt="">
+        </div>
+    </div>
     <app-form-step></app-form-step>
 </div>
