--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,10 +1,15 @@
-$color-btn-activo: #2A9FD8;
+$color-btn-activo: #F10024;
 $color-btn-disabled: #C2C2C2;
+$grisOscuro: rgba(194, 194, 194, 0.747);
+$grissOscuro: #666674;
 $color-error: #fd0019;
 $color-white: #fff;
-$color-mercadolibre: #fff02a;
+$color-mercadolibre: #000000;
 $color-fondo: #F4F4F4;
 $color-transparent:transparent;
+$color-negro: #000000;
+$color-rojo: #F10024;
+$gris-tenue: #e9e9e9be;
 
 /* Responsive */
 
@@ -13,4 +18,4 @@ $mSmall: 375px;
 $lSmall: 425px;
 $tablet: 768px;
 $desktop: 1366px;
-$bigScreen: 1920px
+$bigScreen: 1920px;
