Corrección Identificador nombre form

--- a/src/app/components/form-step/form-step.component.html
+++ b/src/app/components/form-step/form-step.component.html
@@ -150,7 +150,7 @@
 
         <!-- Paso 2 -->
 
-        <mat-step label="Ingresa tus datos" [stepControl]="formTct" [editable]="editable" linear="true">
+        <mat-step label="Ingresa tus datos" [stepControl]="formTc" [editable]="editable" linear="true">
 
             <form #formTc="ngForm" (ngSubmit)="sendCentrales()">
                     <div class="row absolute unoStep">
