Arreglos de estilos Iniciales

--- a/src/app/components/form-step/form-step.component.html
+++ b/src/app/components/form-step/form-step.component.html
@@ -14,7 +14,7 @@
                                         <div class="col-12 col-sm-12">
                                             <div class="cntTitle">
                                                 <div class="title">Calcula tu cuota</div>
-                                                <small>*información requerida</small>
+                                                <small>*Información requerida</small>
                                             </div>
                                         <hr>
 
@@ -116,7 +116,7 @@
                                                             placeholder="0"
                                                             name="valorCuota"
                                                             #Valorcuota="ngModel"
-                                                            [options]="{ align: 'left', prefix: '$ ', thousands: '.', decimal: ',', precision: 0 }"
+                                                            [options]="{ align: 'left', prefix: '$ ', thousands: ',', decimal: ',', precision: 0 }"
                                                             [(ngModel)]="valorCuota"
                                                             required
                                                             disabled>
@@ -133,7 +133,7 @@
                                             
                                             <div class="col-12 col-sm-12">
                                                     <small>*Este valor corresponde al total sin seguros</small><br>
-                                                    <small class="infoRequerida">*información requerida</small>
+                                                    <small class="infoRequerida">*Información requerida</small>
                                                     <hr>
                                             </div>                    
                                         
