--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -100,7 +100,7 @@ body {
 }
 
 .titlesPpal .titleOne {
-  color: #808080;
+  color: #000000;
   margin: 10px 0px;
   font-size: 14px;
   margin: 20px 0px;
@@ -373,7 +373,7 @@ button {
 .encMercadolibre .logos {
   display: grid;
   grid-column: 2;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .encMercadolibre img.mercadolibreM {
@@ -387,7 +387,7 @@ button {
   width: 60%;
   grid-column: 2;
   align-self: center;
-  justify-self: center;
+  justify-self: left;
 }
 
 @media only screen and (min-width: 768px) {
@@ -458,10 +458,10 @@ button {
 @media only screen and (min-width: 1366px) {
   .row.principal.grid {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 0.3fr 2fr 0.3fr;
   }
   .row.principal.grid app-form-step {
-    grid-column: 1;
+    grid-column: 2;
   }
 }
 
